# brickviewer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2512e3624815_rename_price_nl_to_price_ca.py  6db62106d2e1_add_brickset_data.py  e3fe20609d57_initial.py  efc3e7c00129_remove_fk_inventories_set_num.py
backend/app/: main.py
backend/app/api/routes/: minifigs.py  sets.py  stats.py  themes.py
backend/app/core/: config.py
backend/app/models/: __init__.py  lego.py
backend/app/schemas/: lego.py
backend/scripts/: import_csv.py  sync_brickset.py
docs/: data-updates.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/minifigs/: page.tsx
frontend/app/sets/: page.tsx
frontend/app/sets/[set_num]/: page.tsx
frontend/app/themes/: page.tsx
frontend/components/: set-card.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
